# protein-feature-vectors

./: ProteinFeatureVectors.py  README.md  pyproject.toml  setup.py
ProteinFeatureVectors/test/: test.py
data_examples/: multi.fa
protein-feature-vectors/test/: test.py
protein_feature_vectors/: Protein_parameters_setting.json  __init__.py  calculator.py  protein_feature_vectors.py
protein_feature_vectors/test/: test.py
src/iFeatureOmegaCLI/: __init__.py  iFeatureOmegaCLI.py
src/iFeatureOmegaCLI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/iFeatureOmegaCLI/chem/: autocor.py
src/iFeatureOmegaCLI/data_examples/: H6SH45.fa
src/protein-feature-vectors/: ProteinFeatureVectors.py  Protein_parameters_setting.json
src/protein-feature-vectors/test/: test.py
test/: test.py
