[tool.poetry]
name = "protein-feature-vectors"
version = "1.0"
description = "Code to produce fixed-length feature vectors from protein sequences based on iFeatureOmega"
authors = ["Brian Osborne <briano@bioteam.net>"]
readme = "README.md"
packages = [{ include = "protein-feature-vectors" }]
include = [
    "protein-feature-vectors/ProteinFeatureVectors.py",
    "protein-feature-vectors/Protein_parameters_setting.json",
    "protein-feature-vectors/data_examples/*",
    "protein-feature-vectors/data/*",
    "protein-feature-vectors/test/test.py",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
biopython = "^1.6"
pandas = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
