[tool.poetry]
name = "protein_feature_vectors"
version = "1.0"
description = "Code to produce fixed-length feature vectors from protein sequences based on iFeatureOmega"
authors = ["Brian Osborne <briano@bioteam.net>"]
readme = "README.md"
packages = [{ include = "protein_feature_vectors" }]
include = [
    "protein_feature_vectors/calculator.py",
    "protein_feature_vectors/Protein_parameters_setting.json",
    "protein_feature_vectors/data_examples/*",
    "protein_feature_vectors/data/*",
    "protein_feature_vectors/test/test.py",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
biopython = "^1.6"
pandas = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
